--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ab-wedding",
-  "homepage": "https://abhay.github.io/ab-wedding",
+  "homepage": "https://AbhayAsokan.github.io/ab-wedding",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "preload": "yarn build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
